removed visual cursor from canvas to prevent distracting misalignments with needle

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 canvas { 
   background: #c7adba; 
+  cursor: none;
 }
 
 header { 
